--- a/tests/index.html
+++ b/tests/index.html
@@ -1,15 +1,21 @@
 <html>
-<body>
-<p>Tests in progress...</p>
-<script type="module">
-    import {testCases, test} from './UrlPathResolverTest.js';
-    const testedPromises = testCases.map(test);
-    Promise.all(testedPromises)
-        .then(() => alert('No errors, tested ' + testedPromises.length))
-        .catch(exc => {
-            console.error(exc);
-            alert('Got errors, see console - ' + exc);
-        });
-</script>
-</body>
+    <body>
+        <p>Tests in progress...</p>
+        <script type="module">
+            import { testCases, test } from "./UrlPathResolverTest.js";
+            const testedPromises = testCases.map(test);
+            Promise.all(testedPromises)
+                .then(() => alert("No errors, tested " + testedPromises.length))
+                .catch((exc) => {
+                    console.error(exc);
+                    alert("Got errors, see console - " + exc);
+                });
+        </script>
+        <script type="module">
+            import { loadModule } from "https://klesun.github.io/ts-browser/src/ts-browser.js";
+            // language=file-reference
+            const entryScriptPath = "./index.ts";
+            loadModule(entryScriptPath);
+        </script>
+    </body>
 </html>
